FACES-1896 Develop alloy:button, alloy:commandButton, and alloy:icon component (removed .yui3-skin-sam from alloy.css) FACES-1714 Develop Liferay Faces Showcase (fixed white space for button menu)

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -102,18 +102,18 @@ a.yui3-menu-label .alloy-icon,li.yui3-menuitem .alloy-icon {
 }
 
 /* yui3-splitbuttonnav: adjust padding to make splitButtons look like other bootstrap buttons */
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn {
 	padding: 4px 12px;
 }
 
-.yui3-skin-sam div.yui3-splitbuttonnav {
+div.yui3-splitbuttonnav {
 	margin-top: 2px;
 }
 
 /* yui3-splitbuttonnav: adjust splitButton menus to look more like other overlays such as popovers and dialogs */
 
 /* yui3-splitbuttonnav: remove this to prevent staggering of "button" divs */
-.yui3-skin-sam .yui3-menu .yui3-menu div.yui3-menu-content {
+div.yui3-menu .yui3-menu div.yui3-menu-content {
 	padding: 3px;
 }
 
@@ -131,7 +131,7 @@ div.yui3-menu>div.yui3-menu-content>ul div.yui3-menu>div.yui3-menu-content>ul {
 }
 
 .yui3-menu-content li.yui3-menuitem {
-	padding: 3px;
+	padding: 3px 3px 3px 0px;
 }
 
 /* yui3-splitbuttonnav: remove borders */
@@ -139,66 +139,70 @@ div.yui3-menu>div.yui3-menu-content>ul div.yui3-menu>div.yui3-menu-content>ul {
 	border: 0;
 }
 
-.yui3-skin-sam div.yui3-splitbuttonnav li {
+div.yui3-splitbuttonnav .yui3-menu-content li {
 	border: 0;
 }
 
-.yui3-skin-sam a.yui3-menu-content,.yui3-skin-sam .yui3-menu .yui3-menu a.yui3-menu-content {
+.yui3-menu a.yui3-menu-content,
+.yui3-menu .yui3-menu a.yui3-menu-content {
 	border: 0;
 }
 
-.yui3-skin-sam .yui3-menu-horizontal a.yui3-menu-label,.yui3-skin-sam .yui3-menu-horizontal span.yui3-menu-label,.yui3-skin-sam .yui3-menu-horizontal a.yui3-menuitem-content {
+div.yui3-menu-horizontal a.yui3-menu-label,
+div.yui3-menu-horizontal .yui3-menu-content span.yui3-menu-label,
+div.yui3-menu-horizontal a.yui3-menuitem-content {
 	border: 0;
 }
 
 /* yui3-splitbuttonnav: remove negative margin-left values */
-.yui3-skin-sam .yui3-splitbuttonnav span.yui3-menu-label-active {
+div.yui3-splitbuttonnav span.yui3-menu-label-active {
 	margin-left: 0;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav span.yui3-menu-label-menuvisible {
+div.yui3-splitbuttonnav span.yui3-menu-label-menuvisible {
 	margin-left: 0;
 }
 
-.yui3-skin-sam .yui3-menu-horizontal span.yui3-menu-label {
+div.yui3-menu-horizontal span.yui3-menu-label {
 	margin-left: 0;
 }
 
 /* yui3-splitbuttonnav: btn-default have black font all other btn-* have white font */
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-default {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-default {
 	color: #000000;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-primary {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-primary {
 	color: #ffffff;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-info {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-info {
 	color: #ffffff;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-success {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-success {
 	color: #ffffff;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-warning {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-warning {
 	color: #ffffff;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-danger {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-danger {
 	color: #ffffff;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-inverse {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-inverse {
 	color: #ffffff;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn {
+	align-items: flex-start;
 	font-weight: normal;
 }
 
 /* yui3-splitbuttonnav: button radii ... watch out for script tags! */
-.yui3-skin-sam .yui3-splitbuttonnav .btn-group>script:first-child+a.btn {
+div.yui3-splitbuttonnav .btn-group>script:first-child+a.btn {
 	-webkit-border-top-left-radius: 3px;
 	-moz-border-radius-topleft: 3px;
 	border-top-left-radius: 3px;
@@ -207,7 +211,7 @@ div.yui3-menu>div.yui3-menu-content>ul div.yui3-menu>div.yui3-menu-content>ul {
 	border-bottom-left-radius: 3px;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .btn-group>a.btn:first-child {
+div.yui3-splitbuttonnav .btn-group>a.btn:first-child {
 	-webkit-border-top-left-radius: 3px;
 	-moz-border-radius-topleft: 3px;
 	border-top-left-radius: 3px;
@@ -216,7 +220,7 @@ div.yui3-menu>div.yui3-menu-content>ul div.yui3-menu>div.yui3-menu-content>ul {
 	border-bottom-left-radius: 3px;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .btn-group>a.btn:last-child {
+div.yui3-splitbuttonnav .btn-group>a.btn:last-child {
 	-webkit-border-top-right-radius: 3px;
 	-moz-border-radius-topright: 3px;
 	border-top-right-radius: 3px;
@@ -226,27 +230,27 @@ div.yui3-menu>div.yui3-menu-content>ul div.yui3-menu>div.yui3-menu-content>ul {
 }
 
 /* yui3-splitbuttonnav: sizes */
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-large {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-large {
 	padding: 11px 19px;
 	font-size: 17.5px;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-small {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-small {
 	padding: 2px 10px;
 	font-size: 11.9px;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-mini {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-mini {
 	padding: 0 6px;
 	font-size: 10.5px;
 }
 
 /* yui3-splitbuttonnav: disabled */
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label a.btn-disabled {
+div.yui3-splitbuttonnav .yui3-menu-label a.btn-disabled {
 	opacity: .65;
 }
 
-.yui3-skin-sam .yui3-splitbuttonnav .yui3-menu-label span.btn-disabled {
+div.yui3-splitbuttonnav .yui3-menu-label span.btn-disabled {
 	float: left;
 	opacity: .65;
 }
